--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
-transformers
-google-cloud-bigquery
-torch
+streamlit==1.25.0
+transformers==4.31.0
+torch==2.0.1
+google-cloud-bigquery==3.11.4
